...

            android:textColor="@color/blue"
            android:textSize="25dp"
            android:typeface="serif" />

        <Button
            android:id="@+id/buttonAddProfileToSchedule"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="+"
            android:textColor="@color/white"
            android:textSize="24sp"
...
                android:typeface="serif" />


            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listViewMonday"
                android:minHeight="28dp"
                android:layout_marginBottom="3dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
...
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="12dp"
                    android:background="@color/blue"
                    android:textColor="@color/white"
                    android:text="Save Changes"
                    android:id="@+id/buttonAddSchedule"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/blue"
                    android:textColor="@color/white"
                    android:text="Discard Changes"
                    android:layout_marginLeft="4dp"
                    android:id="@+id/buttonDiscardSchedule"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/buttonAddSchedule" />

            </RelativeLayout>

...
